# SpotMicroAI_RaspberryPi

./: README.md
spot_control_pkg/: CMakeLists.txt  package.xml
spot_control_pkg/include/spot_control_pkg/: Kinematics.h  Matrix.h
spot_control_pkg/launch/: RaspberryPi.launch.py
spot_control_pkg/mesh/: HC_SR04.STL  L_arm_cover.STL  Left_writs.STL  Pi_camera_module3.STL  R_arm_cover.STL  Right_writs.STL
spot_control_pkg/src/: Kinematics.cpp  spot_control_node.cpp
spot_control_pkg/urdf/: Spotmicro.urdf  Spotmicro_copy.urdf  spotmicro.urdf
